--- a/PUG-Elements/src/views/cities.pug
+++ b/PUG-Elements/src/views/cities.pug
@@ -1,7 +1,7 @@
 extends layout.pug 
 
 block head 
-    link(rel="stylesheet", href="./cities.css")
+    link(rel="stylesheet", href="../..cities.css")
 
 block content
     h2 Cities 
