--- a/PUG-Elements/src/views/Layout.pug
+++ b/PUG-Elements/src/views/Layout.pug
@@ -1,5 +1,13 @@
 html 
-    head 
+    head
+        link(rel="stylesheet", href="/style.css")
         title Title here...
-        body 
-             block content
+        block head 
+        body
+        .layout
+            .layout-nav
+                include mixins/nav
+                +navigation()
+
+            .layout-content       
+                 block content
