--- a/PUG-Elements/src/views/Layout.pug
+++ b/PUG-Elements/src/views/Layout.pug
@@ -2,12 +2,18 @@ html
   head
     link(rel="stylesheet", href="/style.css")
     title My Cat Website
-    block head
-  body
+    block head 
+
+  
+  main
     .layout
       .layout-nav
         include mixins/nav
         +navigation()
+     
         
       .layout-content
         block content
+
+  body 
+    h1 About us
