--- a/PUG-Elements/src/views/Layout.pug
+++ b/PUG-Elements/src/views/Layout.pug
@@ -15,5 +15,5 @@ html
       .layout-content
         block content
 
-  body 
-    h1 About us
+  footer
+    b © 2024 My Website. All rights reserved. 
