Added Filter Button

--- a/PUG-Elements/src/views/cities.pug
+++ b/PUG-Elements/src/views/cities.pug
@@ -2,9 +2,11 @@ extends layout.pug
 
 block head
   link(rel="stylesheet", href="/cities.css")
+  link(rel="stylesheet", href="/filter.css")
 
 block content
   h2 Cities
+  button Filter 
   table
     thead
       th ID
