--- a/PUG-Elements/src/static/cities.css
+++ b/PUG-Elements/src/static/cities.css
@@ -12,7 +12,7 @@ th,
 td {
     border-bottom: 1px solid var(--clr-table);
     padding: 0.25rem 1rem;
-    text-align: left;
+    text-align: center;
     color: rgba(0, 0, 0, 0.85);
 }
 
