--- a/PUG-Elements/src/static/style.css
+++ b/PUG-Elements/src/static/style.css
@@ -57,3 +57,14 @@ nav a:hover {
 .layout-content {
   padding-top: 1.5rem;
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
