--- a/PUG-Elements/src/views/Layout.pug
+++ b/PUG-Elements/src/views/Layout.pug
@@ -1,5 +1,6 @@
-html 
-    head 
-        title Title here...
-        body 
-             block content
+html
+  head
+    title Title here...
+    link(rel='stylesheet', href='/static/style.css')
+  body
+    block content
