--- a/Kaues-code/style.css
+++ b/Kaues-code/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-size: 12px;
+  font-size: 14px;
   font-family: "Segoe UI", sans-serif;
   background-color: #eeeeee;
   margin: 0;
@@ -13,12 +13,9 @@ body {
   box-sizing: border-box;
 }
 
-main{
-  display : flex;
-}
 .layout {
   display: flex;
-  flex-direction: column ;
+  flex-direction: column;
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
@@ -61,7 +58,13 @@ nav a:hover {
   padding-top: 1.5rem;
 }
 
-footer{
-  margin-top: auto;
-  text-align: center;
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
 }
