--- a/PUG-Elements/src/views/cities.pug
+++ b/PUG-Elements/src/views/cities.pug
@@ -12,6 +12,7 @@ block content
       th ID
       th.text-center Country
       th City
+      th District
       th Population
     tbody
       each row, i in rows
