--- a/PUG-Elements/src/views/mixins/nav.pug
+++ b/PUG-Elements/src/views/mixins/nav.pug
@@ -3,4 +3,5 @@ mixin navigation
     a(href="/")
       b My Website
     a(href="/cities") Cities
+    a(href="/country") CountryLanguage 
     a(href="/about") About 
