--- a/PUG-Elements/src/static/cities.css
+++ b/PUG-Elements/src/static/cities.css
@@ -39,7 +39,7 @@ thead {
 }
 
 thead th {
-    color: whitesmoke;
+    color: rgb(8, 7, 7);
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
