--- a/PUG-Elements/src/views/about.pug
+++ b/PUG-Elements/src/views/about.pug
@@ -16,7 +16,7 @@ block content
   h2 Our Mission and Team
   
   p(style="font-size: 18px;")
-    | WELCOME TO CITYPOP, WHERE WE DELVE INTO THE VIBRANT TAPESTRY OF GLOBAL COMMUNITIES. OUR MISSION IS TO PROVIDE INSIGHTS INTO THE DIVERSE POPULATIONS OF CITIES WORLDWIDE. FROM BUSTLING METROPOLISES TO QUAINT TOWNS, WE AIM TO UNCOVER THE STORIES BEHIND THEIR POPULATIONS. CITYPOP OFFERS A GATEWAY TO EXPLORE DEMOGRAPHIC DATA, ECONOMIC LANDSCAPES, AND CULTURAL NUANCES. WHETHER YOU'RE A STUDENT, TRAVELER, OR CITY PLANNER, JOIN US ON THIS IMMERSIVE JOURNEY THROUGH THE HEART OF CITIES. LET'S EXPLORE, DISCOVER, AND CELEBRATE THE DYNAMIC ESSENCE OF URBAN LIFE TOGETHER!
+    | WELCOME TO CITYPOP, WHERE WE DELVE INTO THE VIBRANT TAPESTRY OF GLOBAL COMMUNITIES. OUR MISSION IS TO PROVIDE INSIGHTS INTO THE DIVERSE POPULATIONS OF CITIES WORLDWIDE. FROM BUSTLING METROPOLISES TO QUAINT TOWNS, WE AIM TO UNCOVER THE STORIES BEHIND THEIR POPULATIONS. CITYPOP OFFERS A GATEWAY TO EXPLORE DEMOGRAPHIC DATA. WHETHER YOU'RE A STUDENT, TRAVELER, OR CITY PLANNER, JOIN US ON THIS IMMERSIVE JOURNEY THROUGH THE HEART OF CITIES. LET'S EXPLORE, DISCOVER, AND CELEBRATE THE DYNAMIC ESSENCE OF URBAN LIFE TOGETHER!
 
   p For inquiries or feedback, feel free to contact us:
   
