--- a/PUG-Elements/src/views/countries.pug
+++ b/PUG-Elements/src/views/countries.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block head
-  link(rel="stylesheet", href="/cities.css")
+  link(rel="stylesheet", href="/countries.css")
 
 block content
   style.
@@ -14,6 +14,11 @@ block content
       background-color: rgba(255, 255, 255, 0.9); /* Adjust the alpha value for transparency */
     }
 
+    /* CSS to center-align text within specific table cells */
+    td.text-center {
+      text-align: center; /* Center-align text within these table cells */
+    }
+
   h2 Countries 
   table
     thead
@@ -22,7 +27,17 @@ block content
         th.text-center| Name
         th| Continent
         th| Region
+        th| SurfaceArea
+        th| IndepYear
         th| Population
+        th| LifeExpectancy
+        th| GNP
+        th| GNPOld
+        th| LocalName
+        th| GovernmentForm
+        th| HeadOfState
+        th| Capital
+        th| Code2
     tbody
       each row, i in rows
         tr
@@ -30,5 +45,15 @@ block content
           td.fit #{row.Name}
           td #{row.Continent}
           td #{row.Region}
+          td #{row.SurfaceArea}
+          td #{row.IndepYear}
           - const population = new Intl.NumberFormat().format(row.Population);
-          td.fit.number #{population}
+          td.fit.number.text-center #{population} 
+          td #{row.SurfaceArea}
+          td #{row.GNP}
+          td #{row.GNPOld}
+          td #{row.LocalName}
+          td #{row.GovernmentForm}
+          td #{row.HeadOfState}
+          td #{row.Capital}
+          td #{row.Code2}
