--- a/PUG-Elements/src/views/mixins/nav.pug
+++ b/PUG-Elements/src/views/mixins/nav.pug
@@ -4,5 +4,5 @@ mixin navigation
       b My Website
     a(href="/cities") Cities
     a(href="/countries") Countries
-    a(href="/CountryLanguages") Country Languages
+    a(href="/countrylanguages") Country Languages
     a(href="/about") About 
