--- a/PUG-Elements/src/views/countries.pug
+++ b/PUG-Elements/src/views/countries.pug
@@ -21,7 +21,7 @@ block content
 
   h2 Countries 
     // Add a form for population sorting
-  form(action="/cities" method="get")
+  form(action="/countries" method="get")
     label(for="sort") Sort by Population:
     select(name="sort" id="sort")
       option(value="none" selected) None
