Added Alpha order

--- a/PUG-Elements/src/views/countries.pug
+++ b/PUG-Elements/src/views/countries.pug
@@ -27,6 +27,8 @@ block content
       option(value="none" selected) None
       option(value="asc") Lowest to Highest
       option(value="desc") Highest to Lowest
+      option(value="name_asc") Name Ascending
+      option(value="name_desc") Name Descending
     button(type="submit" id="apply-filter") Apply
 
   table
