--- a/PUG-Elements/src/views/cities.pug
+++ b/PUG-Elements/src/views/cities.pug
@@ -15,14 +15,15 @@ block content
     }
 
   h2 Cities 
-
-  // Add a form for population sorting
-  form(action="/cities" method="get")
+    // Add a form for population sorting
+  form(action="/countries" method="get")
     label(for="sort") Sort by Population:
     select(name="sort" id="sort")
       option(value="none" selected) None
       option(value="asc") Lowest to Highest
       option(value="desc") Highest to Lowest
+      option(value="name_asc") Name Ascending
+      option(value="name_desc") Name Descending
     button(type="submit" id="apply-filter") Apply
 
   table
