--- a/PUG-Elements/src/views/cities.pug
+++ b/PUG-Elements/src/views/cities.pug
@@ -16,7 +16,7 @@ block content
 
   h2 Cities 
     // Add a form for population sorting
-  form(action="/countries" method="get")
+  form(action="/cities" method="get")
     label(for="sort") Sort by Population:
     select(name="sort" id="sort")
       option(value="none" selected) None
