--- a/PUG-Elements/src/views/mixins/nav.pug
+++ b/PUG-Elements/src/views/mixins/nav.pug
@@ -5,4 +5,6 @@ mixin navigation
     a(href="/cities") Cities
     a(href="/countries") Countries
     a(href="/countrylanguages") Country Languages
+    a(href="/login") Login
+    a(href="/register") Register
     a(href="/about") About 
