--- a/PUG-Elements/src/views/register.pug
+++ b/PUG-Elements/src/views/register.pug
@@ -1,9 +1,18 @@
 extends layout.pug 
 
 block head 
-  link(rel="stylesheet", href="/form.css")
+  link(rel="stylesheet", href="/register.css")
 
 block content
+  style.
+    body {
+      background-image: url('kjopo.jpg');
+      background-size: cover;
+    }
+
+    table {
+      background-color: rgba(255, 255, 255, 0.9);
+    }
   h2 Register
   form(action='/api/register', method='POST')
     label(for='email') Enter your email:
