--- a/PUG-Elements/src/views/countries.pug
+++ b/PUG-Elements/src/views/countries.pug
@@ -4,7 +4,15 @@ block head
   link(rel="stylesheet", href="/countries.css")
 
 block content
+  style.
+    body {
+      background-image: url('kjopo.jpg');
+      background-size: cover; /* Adjust this property as needed */
+    }
 
+    table {
+      background-color: rgba(255, 255, 255, 0.9); /* Adjust the alpha value for transparency */
+    }
   h2 Countries 
     // Add a form for population sorting
   form(action="/countries" method="get")
