--- a/PUG-Elements/src/views/about.pug
+++ b/PUG-Elements/src/views/about.pug
@@ -1,6 +1,15 @@
 extends layout
 
 block content
+  style.
+    body {
+      background-image: url('kjopo.jpg');
+      background-size: cover; /* Adjust this property as needed */
+    }
+
+    table {
+      background-color: rgba(255, 255, 255, 0.9); /* Adjust the alpha value for transparency */
+    }
   - var backgroundColor = 'butterfly'; // Change this to any color you prefer
   
   style.
