--- a/PUG-Elements/src/views/mixins/nav.pug
+++ b/PUG-Elements/src/views/mixins/nav.pug
@@ -1,7 +1,7 @@
 mixin navigation
   nav
     a(href="/")
-      b My Website
+      b Home
     a(href="/cities") Cities
     a(href="/countries") Countries
     a(href="/countrylanguages") Country Languages
